--- a/src/views/CurrenciesView/Currencies.module.scss
+++ b/src/views/CurrenciesView/Currencies.module.scss
@@ -16,13 +16,10 @@
   color: var(--gray);
 
   &__link {
-    padding: 10px 5px;
+    padding: 5px 0px;
     z-index: -1000;
     &:hover {
-      background-color: hsl(0, 0%, 96%);
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      opacity: 0.8;
     }
   }
 }
